--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "tsparticles": "^3.5.0"
   },
   "devDependencies": {
