--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
+    "bcrypt": "^5.1.1",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.3",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
