--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tsparticles": "^3.5.0"
   },
   "devDependencies": {
