--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server/server.js",
+    "dev": "next dev",
+    "server": "node server/server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server/server.js",
+    "start": "concurrently \"npm run dev\" \"npm run server\"",
     "lint": "next lint"
   },
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http": "^0.0.1-security",
     "mongodb": "^6.9.0",
@@ -26,6 +28,7 @@
     "tsparticles": "^3.5.0"
   },
   "devDependencies": {
+    "concurrently": "^9.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
